fix(table): broken styles for inputs in table

--- a/packages/elvis/src/components/table.scss
+++ b/packages/elvis/src/components/table.scss
@@ -371,15 +371,13 @@ $table-invalid-padding: 8px 16px;
   padding: 6px;
 
   .e-input {
-    input {
-      border-color: var(--e-color-border-6);
-      background: transparent;
-    }
+    border-color: var(--e-color-border-6);
+    background: transparent;
 
-    .e-input---focus > input,
-    .e-input---focus > textarea,
-    > input:focus,
-    > textarea:focus {
+    &.e-input---focus,
+    &.e-input---focus,
+    &:has(input:focus),
+    &:has(textarea:focus) {
       border-color: var(--e-color-background-hover-1);
     }
   }
